xcgui.nim


proc XEle_Create*(x: cint; y: cint; cx: cint; cy: cint; hParent: HXCGUI = nil): HELE {.cdecl,
    importc: "XEle_Create", dynlib: xcgui, discardable.}

#~ proc XEle_RegEvent*(hEle: HELE; nEvent: UINT; pEvent: ptr xc_event): BOOL {.cdecl,
    #~ importc: "_XEle_RegEvent", dynlib: xcgui, discardable.}

#~ proc XEle_RemoveEvent*(hEle: HELE; nEvent: UINT; pEvent: ptr xc_event): BOOL {.cdecl,
    #~ importc: "_XEle_RemoveEvent", dynlib: xcgui, discardable.}

proc XEle_RegEventC*(hEle: HELE; nEvent: cint; pFun: pointer): BOOL {.cdecl,
    importc: "XEle_RegEventC", dynlib: xcgui, discardable.}
## 注册事件C方式


proc XEle_RegEventC1*(hEle: HELE; nEvent: cint; pFun: pointer): BOOL {.cdecl,
    importc: "XEle_RegEventC1", dynlib: xcgui, discardable.}

proc XEle_RegEventC2*(hEle: HELE; nEvent: cint; pFun: pointer): BOOL {.cdecl,
    importc: "XEle_RegEventC2", dynlib: xcgui, discardable.}

proc XEle_RemoveEventC*(hEle: HELE; nEvent: cint; pFun: pointer): BOOL {.cdecl,
    importc: "XEle_RemoveEventC", dynlib: xcgui, discardable.}
## 移除事件函数C方式


proc XEle_SendEvent*(hEle: HELE; hEventEle: HELE; nEvent: cint; wParam: WPARAM;
                    lParam: LPARAM): cint {.cdecl, importc: "XEle_SendEvent",
    dynlib: xcgui, discardable.}

proc XEle_PostEvent*(hEle: HELE; hEventEle: HELE; nEvent: cint; wParam: WPARAM;
                    lParam: LPARAM): BOOL {.cdecl, importc: "XEle_PostEvent",
    dynlib: xcgui, discardable.}

proc XEle_IsShow*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsShow", dynlib: xcgui, discardable.}

proc XEle_IsEnable*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsEnable", dynlib: xcgui, discardable.}

proc XEle_IsEnableFocus*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsEnableFocus",
    dynlib: xcgui, discardable.}

proc XEle_IsDrawFocus*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsDrawFocus",
                                       dynlib: xcgui, discardable.}

proc XEle_IsEnableEvent_XE_PAINT_END*(hEle: HELE): BOOL {.cdecl,
    importc: "XEle_IsEnableEvent_XE_PAINT_END", dynlib: xcgui, discardable.}

proc XEle_IsMouseThrough*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsMouseThrough",
    dynlib: xcgui, discardable.}

proc XEle_IsBkTransparent*(hEle: HELE): BOOL {.cdecl,
    importc: "XEle_IsBkTransparent", dynlib: xcgui, discardable.}

proc XEle_IsKeyTab*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsKeyTab", dynlib: xcgui, discardable.}

proc XEle_IsSwitchFocus*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsSwitchFocus",
    dynlib: xcgui, discardable.}

proc XEle_IsEnable_XE_MOUSEWHEEL*(hEle: HELE): BOOL {.cdecl,
    importc: "XEle_IsEnable_XE_MOUSEWHEEL", dynlib: xcgui, discardable.}

proc XEle_IsChildEle*(hEle: HELE; hChildEle: HELE): BOOL {.cdecl,
    importc: "XEle_IsChildEle", dynlib: xcgui, discardable.}

proc XEle_IsEnableCanvas*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsEnableCanvas",
    dynlib: xcgui, discardable.}

proc XEle_IsFocus*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsFocus", dynlib: xcgui, discardable.}

proc XEle_IsFocusEx*(hEle: HELE): BOOL {.cdecl, importc: "XEle_IsFocusEx",
                                     dynlib: xcgui, discardable.}

proc XEle_Enable*(hEle: HELE; bEnable: BOOL) {.cdecl, importc: "XEle_Enable",
    dynlib: xcgui, discardable.}

proc XEle_EnableFocus*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableFocus", dynlib: xcgui, discardable.}

proc XEle_EnableDrawFocus*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableDrawFocus", dynlib: xcgui, discardable.}

proc XEle_EnableDrawBorder*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableDrawBorder", dynlib: xcgui, discardable.}

proc XEle_EnableCanvas*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableCanvas", dynlib: xcgui, discardable.}

proc XEle_EnableEvent_XE_PAINT_END*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableEvent_XE_PAINT_END", dynlib: xcgui, discardable.}

proc XEle_EnableBkTransparent*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableBkTransparent", dynlib: xcgui, discardable.}

proc XEle_EnableMouseThrough*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableMouseThrough", dynlib: xcgui, discardable.}

proc XEle_EnableKeyTab*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableKeyTab", dynlib: xcgui, discardable.}

proc XEle_EnableSwitchFocus*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableSwitchFocus", dynlib: xcgui, discardable.}

proc XEle_EnableEvent_XE_MOUSEWHEEL*(hEle: HELE; bEnable: BOOL) {.cdecl,
    importc: "XEle_EnableEvent_XE_MOUSEWHEEL", dynlib: xcgui, discardable.}

#~ proc XEle_SetRect*(hEle: HELE; pRect: ptr RECT; bRedraw: BOOL = FALSE;
                  #~ nFlags: cint = xc_adjustLayout_all): cint {.cdecl,
    #~ importc: "XEle_SetRect", dynlib: xcgui, discardable.}

#~ proc XEle_SetRectEx*(hEle: HELE; x: cint; y: cint; cx: cint; cy: cint;
                    #~ bRedraw: BOOL = FALSE; nFlags: cint = xc_adjustLayout_all): cint {.
    #~ cdecl, importc: "XEle_SetRectEx", dynlib: xcgui, discardable.}

#~ proc XEle_SetRectLogic*(hEle: HELE; pRect: ptr RECT; bRedraw: BOOL = FALSE;
                       #~ nFlags: cint = xc_adjustLayout_all): cint {.cdecl,
    #~ importc: "XEle_SetRectLogic", dynlib: xcgui, discardable.}
## 逻辑模式坐标


proc XEle_GetRect*(hEle: HELE; pRect: ptr RECT) {.cdecl, importc: "XEle_GetRect",
    dynlib: xcgui, discardable.}
## 相对与父坐标,人眼观察模式


proc XEle_GetRectLogic*(hEle: HELE; pRect: ptr RECT) {.cdecl,
    importc: "XEle_GetRectLogic", dynlib: xcgui, discardable.}
## 相对与父坐标,逻辑模式


proc XEle_GetClientRect*(hEle: HELE; pRect: ptr RECT) {.cdecl,
    importc: "XEle_GetClientRect", dynlib: xcgui, discardable.}
## 左上角为0，0坐标


proc XEle_GetWndClientRect*(hEle: HELE; pRect: ptr RECT) {.cdecl,
    importc: "XEle_GetWndClientRect", dynlib: xcgui, discardable.}

proc XEle_SetWidth*(hEle: HELE; nWidth: cint) {.cdecl, importc: "XEle_SetWidth",
    dynlib: xcgui, discardable.}

proc XEle_SetHeight*(hEle: HELE; nHeight: cint) {.cdecl, importc: "XEle_SetHeight",
    dynlib: xcgui, discardable.}

proc XEle_GetWidth*(hEle: HELE): cint {.cdecl, importc: "XEle_GetWidth", dynlib: xcgui, discardable.}

proc XEle_GetHeight*(hEle: HELE): cint {.cdecl, importc: "XEle_GetHeight",
                                     dynlib: xcgui, discardable.}

proc XEle_RectWndClientToEleClient*(hEle: HELE; pRect: ptr RECT) {.cdecl,
    importc: "XEle_RectWndClientToEleClient", dynlib: xcgui, discardable.}

proc XEle_PointWndClientToEleClient*(hEle: HELE; pPt: ptr POINT) {.cdecl,
    importc: "XEle_PointWndClientToEleClient", dynlib: xcgui, discardable.}

proc XEle_RectClientToWndClient*(hEle: HELE; pRect: ptr RECT) {.cdecl,
    importc: "XEle_RectClientToWndClient", dynlib: xcgui, discardable.}

proc XEle_PointClientToWndClient*(hEle: HELE; pPt: ptr POINT) {.cdecl,
    importc: "XEle_PointClientToWndClient", dynlib: xcgui, discardable.}

proc XEle_AddChild*(hEle: HELE; hChild: HXCGUI): BOOL {.cdecl,
    importc: "XEle_AddChild", dynlib: xcgui, discardable.}

proc XEle_InsertChild*(hEle: HELE; hChild: HXCGUI; index: cint): BOOL {.cdecl,
    importc: "XEle_InsertChild", dynlib: xcgui, discardable.}
## 插入到指定位置


proc XEle_RemoveEle*(hEle: HELE) {.cdecl, importc: "XEle_RemoveEle", dynlib: xcgui, discardable.}

proc XEle_SetZOrder*(hEle: HELE; index: cint): BOOL {.cdecl, importc: "XEle_SetZOrder",
    dynlib: xcgui, discardable.}

proc XEle_SetZOrderEx*(hEle: HELE; hDestEle: HELE; nType: zorder): BOOL {.cdecl,
    importc: "XEle_SetZOrderEx", dynlib: xcgui, discardable.}

proc XEle_GetZOrder*(hEle: HELE): cint {.cdecl, importc: "XEle_GetZOrder",
                                     dynlib: xcgui, discardable.}

proc XEle_SetTopmost*(hEle: HELE; bTopmost: BOOL): BOOL {.cdecl,
    importc: "XEle_SetTopmost", dynlib: xcgui, discardable.}

proc XEle_EnableCSS*(hEle: HELE; bEnable: BOOL) {.cdecl, importc: "XEle_EnableCSS",
    dynlib: xcgui, discardable.}

proc XEle_SetCssName*(hEle: HELE; pName: ptr WCHAR) {.cdecl,
    importc: "XEle_SetCssName", dynlib: xcgui, discardable.}

proc XEle_GetCssName*(hEle: HELE): ptr WCHAR {.cdecl, importc: "XEle_GetCssName",
    dynlib: xcgui, discardable.}

proc XEle_ShowEle*(hEle: HELE; bShow: BOOL) {.cdecl, importc: "XEle_ShowEle",
    dynlib: xcgui, discardable.}

proc XEle_GetType*(hEle: HELE): XC_OBJECT_TYPE {.cdecl, importc: "XEle_GetType",
    dynlib: xcgui, discardable.}

proc XEle_GetHWND*(hEle: HELE): HWND {.cdecl, importc: "XEle_GetHWND", dynlib: xcgui, discardable.}

proc XEle_GetHWINDOW*(hEle: HELE): HWINDOW {.cdecl, importc: "XEle_GetHWINDOW",
    dynlib: xcgui, discardable.}

proc XEle_SetCursor*(hEle: HELE; hCursor: HCURSOR) {.cdecl, importc: "XEle_SetCursor",
    dynlib: xcgui, discardable.}

proc XEle_GetCursor*(hEle: HELE): HCURSOR {.cdecl, importc: "XEle_GetCursor",
                                        dynlib: xcgui, discardable.}

proc XEle_SetID*(hEle: HELE; nID: cint) {.cdecl, importc: "XEle_SetID", dynlib: xcgui, discardable.}

proc XEle_GetID*(hEle: HELE): cint {.cdecl, importc: "XEle_GetID", dynlib: xcgui, discardable.}

proc XEle_SetUID*(hEle: HELE; nUID: cint) {.cdecl, importc: "XEle_SetUID", dynlib: xcgui, discardable.}

proc XEle_GetUID*(hEle: HELE): cint {.cdecl, importc: "XEle_GetUID", dynlib: xcgui, discardable.}

proc XEle_SetName*(hEle: HELE; pName: ptr WCHAR) {.cdecl, importc: "XEle_SetName",
    dynlib: xcgui, discardable.}

proc XEle_GetName*(hEle: HELE): ptr WCHAR {.cdecl, importc: "XEle_GetName",
    dynlib: xcgui, discardable.}

proc XEle_GetParentEle*(hEle: HELE): HELE {.cdecl, importc: "XEle_GetParentEle",
                                        dynlib: xcgui, discardable.}

proc XEle_GetParent*(hEle: HELE): HXCGUI {.cdecl, importc: "XEle_GetParent",
                                       dynlib: xcgui, discardable.}

proc XEle_SetTextColor*(hEle: HELE; color: COLORREF; alpha: BYTE = 255) {.cdecl,
    importc: "XEle_SetTextColor", dynlib: xcgui, discardable.}

proc XEle_GetTextColor*(hEle: HELE): COLORREF {.cdecl, importc: "XEle_GetTextColor",
    dynlib: xcgui, discardable.}

proc XEle_GetTextColorEx*(hEle: HELE): COLORREF {.cdecl,
    importc: "XEle_GetTextColorEx", dynlib: xcgui, discardable.}

proc XEle_SetFocusBorderColor*(hEle: HELE; color: COLORREF; alpha: BYTE = 255) {.cdecl,
    importc: "XEle_SetFocusBorderColor", dynlib: xcgui, discardable.}

proc XEle_GetFocusBorderColor*(hEle: HELE): COLORREF {.cdecl,
    importc: "XEle_GetFocusBorderColor", dynlib: xcgui, discardable.}

proc XEle_SetFont*(hEle: HELE; hFontx: HFONTX) {.cdecl, importc: "XEle_SetFont",
    dynlib: xcgui, discardable.}

proc XEle_GetFont*(hEle: HELE): HFONTX {.cdecl, importc: "XEle_GetFont", dynlib: xcgui, discardable.}

proc XEle_GetFontEx*(hEle: HELE): HFONTX {.cdecl, importc: "XEle_GetFontEx",
                                       dynlib: xcgui, discardable.}

proc XEle_SetAlpha*(hEle: HELE; alpha: BYTE) {.cdecl, importc: "XEle_SetAlpha",
    dynlib: xcgui, discardable.}

proc XEle_GetChildCount*(hEle: HELE): cint {.cdecl, importc: "XEle_GetChildCount",
    dynlib: xcgui, discardable.}

proc XEle_GetChildByIndex*(hEle: HELE; index: cint): HXCGUI {.cdecl,
    importc: "XEle_GetChildByIndex", dynlib: xcgui, discardable.}

proc XEle_GetChildByID*(hEle: HELE; nID: cint): HXCGUI {.cdecl,
    importc: "XEle_GetChildByID", dynlib: xcgui, discardable.}

proc XEle_SetBorderSize*(hEle: HELE; left: cint; top: cint; right: cint; bottom: cint) {.
    cdecl, importc: "XEle_SetBorderSize", dynlib: xcgui, discardable.}

proc XEle_GetBorderSize*(hEle: HELE; pBorder: ptr BorderSize_i) {.cdecl,
    importc: "XEle_GetBorderSize", dynlib: xcgui, discardable.}

proc XEle_SetPadding*(hEle: HELE; left: cint; top: cint; right: cint; bottom: cint) {.
    cdecl, importc: "XEle_SetPadding", dynlib: xcgui, discardable.}

proc XEle_GetPadding*(hEle: HELE; pPadding: ptr PaddingSize_i) {.cdecl,
    importc: "XEle_GetPadding", dynlib: xcgui, discardable.}
